initial commit. Gathered image assets, created nav bar, included locations

--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,30 @@
+header {
+  font-family: sans-serif;
+}
+nav ul li {
+  display: inline;
+}
+.location1 .location2 .location3 .location4 .location5 {
+  display:inline;
+}
+.spanImage img {
+  position: relative;
+  background-size: 100%;
+}
 
 h1 h2 h3 {
-  font: 400 45px/0.5 'Courgette', Helvetica, sans-serif;
+
 }
 
 p {
-  font: 400 14px/1.5 'Average', Times, serif;
+
 }
 
 * {
   background-color: #AA6339;
 }
 
-.campfire {
-  float: right;
-  display:inline;
-
-}
 
 table {
   border-style: dashed;
 }
-
-/*.hours {
-  display:inline;
-  float: left;
-}*/
