--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,61 @@
+body {
+  background-color: #8F3B1B;
+}
+
 header {
   font-family: sans-serif;
+  display:inline;
+  width: 100%;
+}
+
+header ul {
+  width: 100%;
+}
+
+nav {
+  background-color: #404F24;
 }
 nav ul li {
   display: inline;
+  font-weight: bold;
+  width: 100%;
+  background-color: #404F24;
 }
-.location1 .location2 .location3 .location4 .location5 {
-  display:inline;
+header img {
+    display: inline;
+    height: 3%;
+    width: 3%;
+    float:left;
+    margin-right: 1%;
 }
-.spanImage img {
-  position: relative;
+
+.spanImage {
   background-size: 100%;
 }
 
-h1 h2 h3 {
+.locationsContainer {
+    display: inline;
+    width: auto;
 
 }
-
-p {
-
+.location {
+  display: inline-block;
+  width: 16%;
+  font-family: sans-serif;
+  margin: 1%;
+  padding: 1%;
+  border: 2px solid green;
+  border-radius: 10%;
+  background-color: #668D3C;
 }
 
-* {
-  background-color: #AA6339;
-}
 
 
 table {
   border-style: dashed;
+}
+
+.Resources ul {
+  list-style-type: none;
+  padding-left: 1%;
 }
