--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ header ul {
 
 nav {
   background-color: #4E6172;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 nav ul li {
   display: inline;
