--- a/css/style.css
+++ b/css/style.css
@@ -113,3 +113,10 @@ table {
 input {
   border-radius: 4%;
 }
+
+#navbarList {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 90%;
+}
