--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #8F3B1B;
+  font-family: sans-serif;
 }
 
 header {
@@ -8,14 +9,19 @@ header {
   width: 100%;
 }
 
-header ul {
+/*header ul {
   width: 100%;
+}*/
+
+h3 {
+  padding-left: 2%;
+  text-transform: uppercase;
 }
 
 nav {
   background-color: #4E6172;
-  display: inline;
-  width: 100%;
+  display: flex;
+  width: 90%;
 }
 nav ul li {
   display: inline;
@@ -34,19 +40,20 @@ header img {
 
 
 .locationsContainer {
-    /*display: inline;
-    width: 100%;*/
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    width: 90%;
 
 }
 .location {
   display: inline-block;
-  width: 12%;
+  width: 16%;
   font-family: sans-serif;
   margin: 1%;
   padding: 1%;
   border: 2px solid green;
-  border-radius: 10%;
+  border-radius: 5%;
   background-color: #404F24;
 }
 
