--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ nav {
   background-color: #4E6172;
   display: flex;
   width: 90%;
+  border: 1px solid grey;
+  border-radius: 15%;
 }
 nav ul li {
   display: inline;
@@ -62,26 +64,57 @@ header img {
   display: block;
 }
 
-.mission {
-  clear: both;
-}
 .histImages {
   justify-content:
 }
 
-.mission p {
-  margin: 2%;
-}
+/*.mission p {
+  display: flex;
+  flex-direction: row;
+  padding: 1%;
+  margin-left: 1%;
+  justify-content: space-around;
+}*/
 
 .history {
-  display: block;
+  display: flex;
+  flex-direction: row-reverse;
+  padding-left: 1%;
+  justify-content: space-around;
+}
+
+.history > p {
+  margin-left: 1%;
+}
+
+.mission {
+  display: flex;
+  flex-direction: row;
+  padding-left: 1%;
+  justify-content: space-between;
+}
+
+.mission > p {
+  padding-left: 1%;
+}
+
+.resources {
+  display: flex;
+  flex-direction: row;
+  padding-left: 1%;
+  justify-content: flex-start;
+}
+
+.history img {
+  height: 250px;
+  width: 400px;
 }
 
 table {
   border-style: dashed;
 }
 
-.Resources ul {
+.resources ul {
   list-style-type: none;
   padding-left: 1%;
 }
@@ -127,3 +160,14 @@ input {
   justify-content: space-around;
   width: 90%;
 }
+
+.spanImage {
+  padding-top: 1%;
+  /*width: 90%;*/
+  background-image: url('img/campsite-tent-night.jpg');
+  background-attachment: scroll;
+}
+
+/*.spanImage > img {
+  width: 100%;
+}*/
