--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,21 @@ header img {
 }
 .location {
   display: inline-block;
-  width: 16%;
+  width: 18%;
   font-family: sans-serif;
   margin: 1%;
   padding: 1%;
-  border: 2px solid green;
+  border: 4px solid green;
   border-radius: 5%;
   background-color: #404F24;
+}
+
+.location:hover {
+  -webkit-transform:scale(1.15); /* Safari and Chrome */
+  -moz-transform:scale(1.15); /* Firefox */
+  -ms-transform:scale(1.15); /* IE 9 */
+  -o-transform:scale(1.15); /* Opera */
+   transform:scale(1.15);
 }
 
 .histContainer {
@@ -117,6 +125,9 @@ table {
 .resources ul {
   list-style-type: none;
   padding-left: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 table {
@@ -163,11 +174,29 @@ input {
 
 .spanImage {
   padding-top: 1%;
-  /*width: 90%;*/
-  background-image: url('img/campsite-tent-night.jpg');
-  background-attachment: scroll;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+
 }
 
-/*.spanImage > img {
-  width: 100%;
-}*/
+.spanImage img {
+  -webkit-transition: all 1s ease; /* Safari and Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* IE 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
+}
+
+.spanImage:hover img {
+  -webkit-transform:scale(1.05); /* Safari and Chrome */
+  -moz-transform:scale(1.05); /* Firefox */
+  -ms-transform:scale(1.05); /* IE 9 */
+  -o-transform:scale(1.05); /* Opera */
+   transform:scale(1.05);
+}
+
+.data-title {
+  padding-left: 2%;
+  color: orange;
+}
