--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 header {
   font-family: sans-serif;
-  display:inline;
+  display:flex;
   width: 100%;
 }
 
@@ -20,10 +20,9 @@ h3 {
 
 nav {
   background-color: #4E6172;
-  display: flex;
-  width: 90%;
+  display:  flex;
+  width: 100%;
   border: 1px solid grey;
-  border-radius: 15%;
 }
 nav ul li {
   display: inline;
@@ -54,9 +53,10 @@ header img {
   font-family: sans-serif;
   margin: 1%;
   padding: 1%;
-  border: 4px solid green;
+  border: 1px solid green;
   border-radius: 5%;
   background-color: #404F24;
+  text-align: center;
 }
 
 .location:hover {
@@ -102,6 +102,10 @@ header img {
   justify-content: space-between;
 }
 
+.mission img {
+  border: 15px solid #3e2b14;
+}
+
 .mission > p {
   padding-left: 1%;
 }
@@ -113,9 +117,15 @@ header img {
   justify-content: flex-start;
 }
 
+.resources img {
+  border: 15px solid #3e2b14;
+}
+
 .history img {
   height: 250px;
   width: 400px;
+  border: 15px solid #3e2b14;
+  /*padding: 10px;*/
 }
 
 table {
